asset renames in index html file

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
   <head>
     <title>Asteroid</title>
     <link rel="stylesheet" href="/css/style.css">
-    <script src="/js/settings.js"></script>
-    <script src="/js/input.js"></script>
+    <script src="/js/canvasActuator.js"></script>
+    <script src="/js/keyboardInputManager.js"></script>
     <script src="/js/game.js"></script>
     <script src="/js/stars.js"></script>
     <script src="/js/ship.js"></script>
