switching to static assets permanently

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <html>
   <head>
     <title>Asteroid</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <script src="/js/canvasActuator.js"></script>
-    <script src="/js/keyboardInputManager.js"></script>
-    <script src="/js/game.js"></script>
-    <script src="/js/stars.js"></script>
-    <script src="/js/ship.js"></script>
-    <script src="/js/bullet.js"></script>
-    <script src="/js/app.js"></script>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/canvasActuator.js"></script>
+    <script src="js/keyboardInputManager.js"></script>
+    <script src="js/game.js"></script>
+    <script src="js/stars.js"></script>
+    <script src="js/ship.js"></script>
+    <script src="js/bullet.js"></script>
+    <script src="js/app.js"></script>
   </head>
   <body>
     <h1 id="page-title">Asteroid</h1>
