--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="js/stars.js"></script>
     <script src="js/ship.js"></script>
     <script src="js/bullet.js"></script>
+    <script src="js/asteroid.js"></script>
     <script src="js/app.js"></script>
   </head>
   <body>
