--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
   <head>
     <title>Asteroid</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/canvasActuator.js"></script>
-    <script src="js/keyboardInputManager.js"></script>
-    <script src="js/game.js"></script>
-    <script src="js/stars.js"></script>
-    <script src="js/ship.js"></script>
-    <script src="js/bullet.js"></script>
-    <script src="js/asteroid.js"></script>
+    <script src="js/io/canvasActuator.js"></script>
+    <script src="js/io/keyboardInputManager.js"></script>
+    <script src="js/game/game.js"></script>
+    <script src="js/game/stars.js"></script>
+    <script src="js/game/ship.js"></script>
+    <script src="js/game/bullet.js"></script>
+    <script src="js/game/asteroid.js"></script>
     <script src="js/app.js"></script>
   </head>
   <body>
