--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script src="js/io/canvasActuator.js"></script>
     <script src="js/io/keyboardInputManager.js"></script>
     <script src="js/game/game.js"></script>
+    <script src="js/game/collider.js"></script>
     <script src="js/game/stars.js"></script>
     <script src="js/game/ship.js"></script>
     <script src="js/game/bullet.js"></script>
