extracted positionable module and added tools for module inclusion

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
   <head>
     <title>Asteroid</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/util.js"></script>
+    <script src="js/game/positionable.js"></script>
     <script src="js/io/canvasActuator.js"></script>
     <script src="js/io/keyboardInputManager.js"></script>
     <script src="js/game/game.js"></script>
