--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <div id="game-container">
       <canvas id="game-canvas"></canvas>
     </div>
-    <footer>By Hari Mohanraj</footer>
+    <footer>
+      By Hari Mohanraj -
+      <a href="https://github.com/harimohanraj89/asteroid" target="_blank">Source Code</a>
+    </footer>
   </body>
 </html>
